log
Tue, Apr 15, 2025  9:21:24 PM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Tue, Apr 15, 2025  9:31:37 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
c85f325
Wed, Apr 16, 2025 10:51:20 AM: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
503eecd
Wed, Apr 16, 2025 10:52:09 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  2|4
total_score: 20/70
2a6dcfe
Wed, Apr 16, 2025 11:01:59 AM: 
 hashmap.c | 20 +++++++++++++-------
 1 file changed, 13 insertions(+), 7 deletions(-)
 tests:  0|0
aa0df3c
Wed, Apr 16, 2025 11:03:32 AM: 
 hashmap.c | 22 ++++++----------------
 1 file changed, 6 insertions(+), 16 deletions(-)
 tests:  2|4
total_score: 20/70
ced8d45
Wed, Apr 16, 2025 11:04:26 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 30/70
5161389
Wed, Apr 16, 2025 11:05:09 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|2
total_score: 40/70
d6360fb
Wed, Apr 16, 2025 11:05:46 AM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/70
fd7dbe4
Wed, Apr 16, 2025 11:06:39 AM: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  8|2
total_score: 40/70
a098a2e
Wed, Apr 16, 2025 11:08:56 AM: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 40/70
3a7e97b
Wed, Apr 16, 2025 11:10:43 AM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 50/70
521c918
Wed, Apr 16, 2025 11:53:51 AM: 
 tests:  13|1
total_score: 50/70
eea4742
